# 7placeBot

./: .env.example  .env.exemple  .gitignore  Dockerfile  README.md  config.exemple  credentials.txt  default.nix  docker-compose.yml  draw.js  draw.py  flake.nix  imgToMatrix.py  pyproject.toml
7placebot/: draw.js  draw.py  imgToMatrix.py
r7placebot/: __init__.py  imgToMatrix.py
