[tool.poetry]
name = "r7placebot"
version = "0.1.0"
description = ""
authors = ["Mattéo Ricard <ricardm@bde.enseeiht.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
helium = "^5.0.0"

[tool.poetry.scripts]
r7placebot = "r7placebot:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
