[tool.poetry]
name = "r7placebot"
version = "0.1.0"
description = ""
authors = ["Mattéo Ricard <ricardm@bde.enseeiht.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
helium = "^5.0.0"
pillow = "^10.2.0"
numpy = "^1.26.4"

[tool.poetry.scripts]
r7placebot = "r7placebot:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
